                       User-Visible remctl Changes

remctl 3.4 (unreleased)

    Add new APIs for establishing a remctl connection given a sockaddr,
    a list of struct addrinfo, or an already-open socket.

    Following Perl Best Practices, remove prototypes from all Net::Remctl
    functions.  The confusion caused by changing context away from how
    Perl normally works is not worth any diagnostic value.

    The Net::Remctl Perl bindings now require Perl 5.8 or later (instead
    of 5.006 in previous versions) and are now built with Module::Build
    instead of ExtUtils::MakeMaker.  This should be transparent to anyone
    not working with the source code, since Perl 5.8 was released in 2002,
    but Module::Build and ExtUtils::CBuilder are now required to build
    Net::Remctl.  They are included in Perl 5.10 or later and can be
    installed separately for older versions of Perl.

    Update to rra-c-util 4.7:

    * Fix probing for Heimdal's libroken to work with older versions.
    * Improve POD tests.

remctl 3.3 (2012-09-25)

    Fix a file descriptor leak when checking ACL files.  This would cause
    long-running remctld processes to eventually run out of available file
    descriptors.

    Fix some memory leaks when reloading the remctld configuration and
    several memory leaks when closing or reusing client connections in
    libremctl.

    Don't create the remctld PID file until the network socket is bound
    and listening.  This helps init scripts starting the daemon to know
    when startup is complete and the service is available.

    Remove prototypes from the Perl remctl() function.  With prototypes,
    the connection and command information could not be provided via an
    array, since the prototype forces it into scalar context.

    Fix build dependencies for language bindings to work with parallel
    builds and pass CPPFLAGS down to the language binding build systems.

    Update to rra-c-util 4.6:
