@@ -6,6 +6,9 @@ remctl_error
 remctl_new
 remctl_noop
 remctl_open
+remctl_open_addrinfo
+remctl_open_fd
+remctl_open_sockaddr
 remctl_output
 remctl_result_free
 remctl_set_ccache
