@@ -3,7 +3,7 @@
  *
  * Written by Russ Allbery <rra@stanford.edu>
  * Based on prior work by Anton Ushakov
- * Copyright 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2011, 2012
+ * Copyright 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2011, 2012, 2013
  *     The Board of Trustees of the Leland Stanford Junior University
  *
  * Permission is hereby granted, free of charge, to any person obtaining a
@@ -45,6 +45,10 @@ struct iovec {
 #else
 struct iovec;
 #endif
+
+/* Forward declarations of socket structs for alternate remctl_open APIs. */
+struct addrinfo;
+struct sockaddr;
 
 /*
  * BEGIN_DECLS is used at the beginning of declarations so that C++
@@ -125,23 +129,25 @@ void remctl_close(struct remctl *);
 
 /*
  * Some alternate interfaces for opening connections.  In each of these,
- * principal may be NULL, in which case host/<host> is used, as for the
- * basic remctl_open.  If principal is not NULL, then host is not used
- * and may be NULL.  Connections established using these interfaces do
- * not support automatic connection reopening, which means they cannot
- * be used to send more than one command to a v1 server.
+ * principal may be NULL, in which case host/<host> is used, as for the basic
+ * remctl_open.  If principal is not NULL, then host is not used and may be
+ * NULL.  Connections established using these interfaces do not support
+ * automatic connection reopening, which means they cannot be used to send
+ * more than one command to a v1 server.
  */
 int remctl_open_addrinfo(struct remctl *r, const char *host,
                          const struct addrinfo *ai, const char *principal);
 int remctl_open_sockaddr(struct remctl *r, const char *host,
                          const struct sockaddr *addr, int addrlen,
                          const char *principal);
+
+/* Windows uses a SOCKET type for sockets instead of an integer. */
 #ifdef _WIN32
-int remctl_open_fd(struct remctl *r, const char *host,
-                   SOCKET fd, const char *principal);
+int remctl_open_fd(struct remctl *r, const char *host, SOCKET fd,
+                   const char *principal);
 #else
-int remctl_open_fd(struct remctl *r, const char *host,
-                   int fd, const char *principal);
+int remctl_open_fd(struct remctl *r, const char *host, int fd,
+                   const char *principal);
 #endif
 
 
